テスト/src/objects/Plot_Chart_Data__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>企業名</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>プロットチャートデータ</relationshipLabel>
        <relationshipName>R00N80000002c5NrEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_For_Making_Index__c</fullName>
        <label>指標化対象コスト（設計～テスト）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_Of_Index_Calculation_Objects_FP__c</fullName>
        <label>指標算出対象ＦＰ数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>案件名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>運営形態別分類１</label>
        <picklist>
            <picklistValues>
                <fullName>ＩＳ子会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>アウトソース</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>インソース</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>長期包括アウトソース</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>プロットチャートデータ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Type__c</columns>
        <columns>AccountId__c</columns>
        <columns>Cost_For_Making_Index__c</columns>
        <columns>Number_Of_Index_Calculation_Objects_FP__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>View</fullName>
        <columns>NAME</columns>
        <columns>AccountId__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Cost_For_Making_Index__c</columns>
        <columns>Number_Of_Index_Calculation_Objects_FP__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>全てのプロットチャートデータ</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>プロットチャートデータ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>